--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
     "com-badrit-base64": "^0.2.0",
-    "cordova-android": "^4.1.1",
+    "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "1.1.4",
@@ -39,7 +39,7 @@
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-ionic-webview": "1.1.19",
     "cordova-plugin-statusbar": "^2.2.2",
-    "cordova-plugin-telerik-imagepicker": "^2.2.1",
+    "cordova-plugin-telerik-imagepicker": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.6.0",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -63,14 +63,13 @@
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-telerik-imagepicker": {
-        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "your usage message"
-      },
       "com-badrit-base64": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "ionic-plugin-keyboard": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
